--- a/homework-01/style/screen2.css
+++ b/homework-01/style/screen2.css
@@ -7,3 +7,74 @@ body {
 	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
 }
 
+#flex-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+
+#login {
+	/* flex: 1; */
+    box-sizing: border-box;
+	padding: 2.5rem;
+
+	max-width: 32rem;
+	width: 90%;
+
+	background-color: white;
+	border-radius: 10px;
+}
+
+#login header {
+	font-size: 32px;
+	margin-bottom: 20px;
+}
+
+#form {
+	display: flex;
+    flex-direction: column;
+}
+
+#form legend {
+	color: #848694;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+#username,
+#email,
+#password {
+	margin-top: 30px;
+	margin-bottom: 15px;
+	border-top-style: hidden;
+	border-right-style: hidden;
+	border-left-style: hidden;
+
+	border-bottom: 2px solid #eae8f1;
+	outline: none;
+}
+
+#username:focus,
+#email:focus,
+#password:focus {
+	border-bottom: 2px solid #928dce;
+	outline: none;
+}
+
+#submit-button {
+    align-self: flex-end;
+
+    margin-top: 30px;
+
+    max-width: 10rem;
+    width: 160px;
+	height: 35px;
+
+	background-color: #4cc4d3;
+    color: white;
+    font-size: 16px;
+    
+	border: none;
+	border-radius: 25px;
+}
