--- a/homework-01/style/screen2.css
+++ b/homework-01/style/screen2.css
@@ -14,8 +14,20 @@ body {
 	height: 100vh;
 }
 
+@media only screen and (max-width: 768px) {
+	#login {
+		box-sizing: border-box;
+		padding: 2.5rem;
+	
+		max-width: 32rem;
+		width: 90%;
+	
+		background-color: white;
+		border-radius: 10px;
+	}
+}
+
 #login {
-	/* flex: 1; */
     box-sizing: border-box;
 	padding: 2.5rem;
 
