--- a/homework-01/style/screen3.css
+++ b/homework-01/style/screen3.css
@@ -4,78 +4,96 @@
 
 body {
 	font-size: 16px;
-	
 }
 
 #search-flex-wrapper {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-    width: 100%;
+	width: 100%;
 }
 
-#search {
+#search-field-wrapper {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 250px;
+    height: 45px;
+
     border-radius: 25px;
+    background-color: #f6f7fc;
+    border: 1px ;
+}
+
+#heading {
+    font-size: 3rem;
 }
 
 #profile {
-    height: 100vh;
-    max-width: 18rem;
+	height: 100vh;
+	max-width: 18rem;
 
-    /* width to be determined */
-    width: 430px;
+	/* width to be determined */
+	width: 430px;
 
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 #profile-info {
-    height: 200px;
-    background-color: white;
+	height: 200px;
+	background-color: white;
 }
 
 #metrics {
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 
-    background-color: wheat;
+	background-color: wheat;
 }
 
 #post-count {
-    align-self: flex-start;
+	align-self: flex-start;
 }
 
 #reactions-count {
-    align-self: flex-start;
+	align-self: flex-start;
 }
 
 #log-out-button {
-    align-self: flex-end;
-    border-radius: 25px;
-    border: none;
+	align-self: flex-end;
+	border-radius: 25px;
+	border: none;
 }
 
 #posts-flex-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 	justify-content: center;
-    width: 100%;
-    background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
+	width: 100%;
+	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
 }
 
 #posts {
-    height: 100vh;
-    max-width: 55rem;
-    width: 400px;
+	height: 100vh;
+	max-width: 55rem;
+	width: 400px;
 
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 #make-comment {
-    height: 65px;
-    background-color: wheat;
+	height: 65px;
+	background-color: wheat;
 }
 
 .post {
-    background-color: white;
+	background-color: white;
+}
+
+#comment-icon {
+	font-size: 1rem;
+	color: #97c0c2
 }
