--- a/homework-01/style/screen3.css
+++ b/homework-01/style/screen3.css
@@ -29,6 +29,19 @@ body {
 
 #heading {
 	font-size: 3rem;
+	margin-left: 48pxrem;
+}
+
+#search-field-wrapper {
+	margin-right: 48px;
+}
+
+#search-text {
+	margin-left: 24px;
+}
+
+#search-icon {
+	margin-right: 24px;
 }
 
 #profile {
