--- a/homework-01/style/screen3.css
+++ b/homework-01/style/screen3.css
@@ -43,11 +43,8 @@ body {
 }
 
 #profile {
-	height: 100vh;
 	max-width: 18rem;
-
-	/* width to be determined */
-	width: 350px;
+	width: 18rem;
 
 	margin-top: 10px;
 	margin-right: 5px;
@@ -74,7 +71,7 @@ body {
 	flex-direction: row;
 	align-items: center;
 
-	background-color: #f6f7fd;
+	background-color: #e7e8ec;
 }
 
 #metrics > section {
@@ -118,14 +115,15 @@ body {
 #posts-wrapper {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
-	width: 100%;
+
+	height: 100vh;
+
 	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
 }
 
 #posts {
-	height: 100vh;
 	max-width: 55rem;
 	width: 850px;
 
@@ -165,12 +163,13 @@ body {
 	margin-right: 48px;
 
 	border-radius: 25px;
-	background-color: #f6f7fc;
+	background-color: white;
 	border: 1px;
 }
 
 #post-placeholder {
 	margin-left: 24px;
+	color: #97c0c2;
 }
 
 #comment-icon {
@@ -195,30 +194,43 @@ body {
 
 .post > * {
 	margin-top: 10px;
-	margin-right: 10px;
+	margin-right: 16px;
 }
 
 .post-contents {
 	display: flex;
 	flex-direction: column;
+	width: 46rem;
 }
 
 .author {
 	display: flex;
 	flex-direction: row;
+
+	box-sizing: border-box;
 }
 
-.likes {
+.post-author {
+	margin-top: 5px;
+	margin-bottom: 0px;
+
+	font-weight: bold;
+}
+
+.post-timestamp {
 	display: flex;
-	flex-direction: row;
+	align-items: center;
+	margin-top: 5px;
+	margin-bottom: 0px;
+
+	color: grey;
 }
 
 #dot-separator {
-	height: 1px;
-	width: 1px;
+	font-size: 0.3rem;
 
-	margin-left: 3px;
-	margin-right: 3px;
+	margin-left: 5px;
+	margin-right: 5px;
 
 	color: grey;
 }
@@ -227,8 +239,22 @@ body {
 	width: 2.5rem;
 	height: 2.5rem;
 
-	padding-top: 16px;
+	padding-top: 8px;
 	margin-left: 44px;
 
 	border-radius: 50px;
+}
+
+.post-metrics {
+	display: flex;
+	flex-direction: row;
+}
+
+.post-metrics > * {
+	margin-right: 3rem;
+}
+
+.likes,
+.dislikes {
+	margin-right: 0.3rem;
 }
