--- a/homework-01/style/feed.css
+++ b/homework-01/style/feed.css
@@ -2,26 +2,38 @@
 	font-family: Helvetica, sans-serif;
 }
 
+html {
+    min-height: 100%;
+    height: 100%;
+    min-width: 100%;
+    width: 100%;
+}
+
 body {
 	font-size: 16px;
-	margin: 0;
+	height: 100%;
+	width: 100%;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
 #heading-wrapper {
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	width: 100%;
+
+	/* width: 100%; */
+	height: 3rem;
 }
 
 #search-field {
-	box-sizing: border-box;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 
-	width: 250px;
-	height: 45px;
+	width: 16rem;
+	height: 2rem;
 
 	margin-right: 48px;
 
@@ -31,7 +43,7 @@ body {
 }
 
 #heading {
-	font-size: 3rem;
+	font-size: 2.5rem;
 	margin-left: 48px;
 }
 
@@ -57,14 +69,17 @@ body {
 	align-items: center;
 	justify-content: center;
 
-	box-sizing: border-box;
 	background-color: white;
 }
 
 #profile-icon {
-	height: 125px;
-	width: 125px;
+	height: 5rem;
+	width: 5rem;
 	border-radius: 50px;
+}
+
+#username {
+	font-size: 1.8rem;
 }
 
 #metrics {
@@ -119,14 +134,13 @@ body {
 	align-items: flex-start;
 	justify-content: center;
 
-	height: 100vh;
+	height: 100%;
 
 	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
 }
 
 #posts {
 	max-width: 55rem;
-	width: 850px;
 
 	margin-top: 10px;
 	margin-left: 5px;
@@ -153,12 +167,11 @@ body {
 }
 
 #post-field {
-	box-sizing: border-box;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 
-	width: 680px;
+	width: 80%;
 	height: 45px;
 
 	margin-right: 48px;
@@ -207,8 +220,6 @@ body {
 .author {
 	display: flex;
 	flex-direction: row;
-
-	box-sizing: border-box;
 }
 
 .post-author {
@@ -258,4 +269,10 @@ body {
 .likes,
 .dislikes {
 	margin-right: 0.3rem;
+}
+
+@media only screen and (max-width: 890px) {
+	#posts-wrapper {
+		flex-direction: column;
+	}
 }
