--- a/homework-01/style/feed.css
+++ b/homework-01/style/feed.css
@@ -3,21 +3,20 @@
 }
 
 html {
-    min-height: 100%;
-    height: 100%;
-    min-width: 100%;
-    width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 body {
-	font-size: 16px;
 	height: 100%;
 	width: 100%;
-	margin-left: 0px;
-	margin-right: 0px;
+
+	margin: 0px;
+
+	font-size: 16px;
 }
 
-#heading-wrapper {
+header {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -35,7 +34,7 @@ body {
 	width: 16rem;
 	height: 2rem;
 
-	margin-right: 48px;
+	margin-right: 3rem;
 
 	border-radius: 25px;
 	background-color: #f6f7fc;
@@ -44,23 +43,34 @@ body {
 
 #heading {
 	font-size: 2.5rem;
-	margin-left: 48px;
+	margin-left: 3rem;
 }
 
 #search-text {
-	margin-left: 24px;
+	margin-left: 1.5rem;
 }
 
 #search-icon {
-	margin-right: 24px;
+	margin-right: 1.5rem;
+}
+
+main {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: center;
+
+	height: 100%;
+
+	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
 }
 
 #profile {
 	max-width: 18rem;
 	width: 18rem;
 
-	margin-top: 10px;
-	margin-right: 5px;
+	margin-top: 0.5rem;
+	margin-right: 0.3rem;
 }
 
 #profile-info {
@@ -79,7 +89,9 @@ body {
 }
 
 #username {
-	font-size: 1.8rem;
+	font-size: 1.2rem;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 
 #metrics {
@@ -91,7 +103,8 @@ body {
 }
 
 #metrics > section {
-	margin: 0px 5px 0px 5px;
+	margin-left: 0.4rem;
+	margin-right: 0.4rem;
 }
 
 .metric-heading {
@@ -100,7 +113,10 @@ body {
 
 #post-count > *,
 #reactions-count > * {
-	margin: 10px 5px 10px 5px;
+	margin-top: 0.6rem;
+	margin-bottom: 0.6rem;
+	margin-left: 0.3rem;
+	margin-right: 0.3rem;
 }
 
 .counter {
@@ -117,8 +133,8 @@ body {
 
 #log-out-button {
 	margin-right: 10px;
-	width: 75px;
-	height: 35px;
+	width: 4.5rem;
+	height: 2rem;
 	color: #6ca7a9;
 	background-color: #f5f3fa;
 
@@ -128,22 +144,12 @@ body {
 	font-weight: bold;
 }
 
-#posts-wrapper {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	justify-content: center;
-
-	height: 100%;
-
-	background-image: linear-gradient(-100deg, #a2f2f1 0%, #b19afe 100%);
-}
-
 #posts {
 	max-width: 55rem;
+	width: 55rem;
 
-	margin-top: 10px;
-	margin-left: 5px;
+	margin-top: 0.5rem;
+	margin-right: 0.3rem;
 }
 
 #make-post {
@@ -152,7 +158,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 
-	height: 65px;
+	height: 4rem;
 
 	background-color: #e7e8ec;
 }
@@ -161,7 +167,7 @@ body {
 	width: 2rem;
 	height: 2rem;
 
-	margin-left: 48px;
+	margin-left: 3rem;
 
 	border-radius: 50px;
 }
@@ -174,7 +180,7 @@ body {
 	width: 80%;
 	height: 45px;
 
-	margin-right: 48px;
+	margin-right: 3rem;
 
 	border-radius: 25px;
 	background-color: white;
@@ -182,12 +188,12 @@ body {
 }
 
 #post-placeholder {
-	margin-left: 24px;
+	margin-left: 1.5rem;
 	color: #97c0c2;
 }
 
 #comment-icon {
-	margin-right: 24px;
+	margin-right: 1.5rem;
 
 	font-size: 1rem;
 	color: #97c0c2;
@@ -207,14 +213,14 @@ body {
 }
 
 .post > * {
-	margin-top: 10px;
-	margin-right: 16px;
+	margin-top: 0.6rem;
+	margin-right: 1rem;
 }
 
 .post-contents {
 	display: flex;
 	flex-direction: column;
-	width: 46rem;
+	width: 85%
 }
 
 .author {
@@ -223,7 +229,7 @@ body {
 }
 
 .post-author {
-	margin-top: 5px;
+	margin-top: 0.3rem;
 	margin-bottom: 0px;
 
 	font-weight: bold;
@@ -232,7 +238,7 @@ body {
 .post-timestamp {
 	display: flex;
 	align-items: center;
-	margin-top: 5px;
+	margin-top: 0.3rem;
 	margin-bottom: 0px;
 
 	color: grey;
@@ -241,18 +247,18 @@ body {
 #dot-separator {
 	font-size: 0.3rem;
 
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 0.3rem;
+	margin-right: 0.3rem;
 
 	color: grey;
 }
 
-#medium-profile-icon {
+.medium-profile-icon {
 	width: 2.5rem;
 	height: 2.5rem;
 
-	padding-top: 8px;
-	margin-left: 44px;
+	margin-top: 0.5rem;
+	margin-left: 3rem;
 
 	border-radius: 50px;
 }
@@ -272,7 +278,54 @@ body {
 }
 
 @media only screen and (max-width: 890px) {
-	#posts-wrapper {
-		flex-direction: column;
+	header {
+		width: 90%;
 	}
+
+	main {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	#profile {
+		width: 90%;
+		margin: 0px;
+	}
+	
+	#profile-icon {
+		width: 5.25rem;
+		height: 5.25rem;
+	}
+
+	#metrics {
+		height: 3.75rem;
+	}
+
+	.metric-heading {
+		font-size: 0.75rem;
+	}
+	
+	.counter {
+		font-size: 1.125rem;
+	}
+	
+	#posts {
+		width: 90%;
+		margin: 0px;
+	}
+
+	#make-post {
+		height: 3rem;
+	}
+
+	.post {
+		min-height: 7rem;
+		font-size: 0.875rem;
+		padding: 1rem;
+	}
+
+	.medium-profile-icon {
+		margin-left: 1.5rem;
+	}
+
 }
