--- a/homework-01/style/feed.css
+++ b/homework-01/style/feed.css
@@ -178,7 +178,7 @@ main {
 	justify-content: space-between;
 
 	width: 80%;
-	height: 45px;
+	height: 3rem;
 
 	margin-right: 3rem;
 
@@ -330,6 +330,7 @@ main {
 	#post-field {
 		margin-left: 0.5rem;
 		margin-right: 1.5rem;
+		height: 2rem;
 	}
 
 	.post {
